--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,6 +16,7 @@ letsencrypt_domain_key_path: '{{ letsencrypt_certificate_path }}/{{ letsencrypt_
 letsencrypt_chained_pem_path: '{{ letsencrypt_certificate_path }}/{{ letsencrypt_domains[0] }}.pem'
 
 letsencrypt_intermediate_url: 'https://letsencrypt.org/certs/lets-encrypt-r3.pem'
+# default to staging environment. THIS WILL ISSUE INVALID CERTS FOR TESTING
 letsencrypt_default_ca: 'https://acme-staging-v02.api.letsencrypt.org/directory'
 
 letsencrypt_cron_renew: ['0', '0', '1', '*', '*']
